Bug 345319 - importing ldif data fails to recognize groups
Summary: importing ldif data fails to recognize groups
Status: RESOLVED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-18 22:28 UTC by Manuel Díaz
Modified: 2015-03-24 12:52 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14.7
Sentry Crash Report:


Attachments
testcase (263 bytes, text/x-ldif)
2015-03-18 22:29 UTC, Manuel Díaz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Manuel Díaz 2015-03-18 22:28:37 UTC
When importing ldif data, groups are imported as ordinary contacts. Seems that the line "objectclass: groupOfNames" is not taken into account

Reproducible: Always

Steps to Reproduce:
1.File -> Import -> Import ldif file, select file ldif file and AddressBook
2.Select imported group
3.

Actual Results:  
Icon and contextual menu refer to contact, not to group

Expected Results:  
Customary  group icon and contextual menu

OpenSUSE 13.2
KAddressBook 4.14.5
Comment 1 Manuel Díaz 2015-03-18 22:29:20 UTC
Created attachment 91628 [details]
testcase
Comment 2 Laurent Montel 2015-03-19 06:35:25 UTC
I confirm it too.
Comment 3 Laurent Montel 2015-03-19 06:42:47 UTC
Git commit 4ab4ed4f3cc674046bde11c6ccfb388f0ca76e9b by Montel Laurent.
Committed on 19/03/2015 at 06:36.
Pushed by mlaurent into branch 'KDE/4.14'.

Minor optimization. group is not a category. It was a very old code...

M  +3    -3    kabc/ldifconverter.cpp

http://commits.kde.org/kdepimlibs/4ab4ed4f3cc674046bde11c6ccfb388f0ca76e9b
Comment 4 Laurent Montel 2015-03-19 07:40:01 UTC
It needs a lot of work for supporting group.
I will work on.
Comment 5 Laurent Montel 2015-03-24 07:34:08 UTC
Git commit 9bea3bea03051898a82f69e88ef0f729fe420085 by Montel Laurent.
Committed on 24/03/2015 at 07:33.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix bug Bug 345319 - importing ldif data fails to recognize groups

FIXED-IN: 4.14.7

M  +37   -5    kabc/tests/ldifconvertertest.cpp
M  +1    -0    kabc/tests/ldifconvertertest.h

http://commits.kde.org/kdepimlibs/9bea3bea03051898a82f69e88ef0f729fe420085
Comment 6 Laurent Montel 2015-03-24 12:52:50 UTC
Git commit 10c62809e15cf7a08861d4970eb499e9fe9de5de by Montel Laurent.
Committed on 24/03/2015 at 12:47.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 345319 - importing ldif data fails to recognize groups

FIXED-IN: 4.14.7

M  +6    -0    kaddressbook/xxport/shared/xxport.h
M  +13   -7    kaddressbook/xxport/xxportmanager.cpp
M  +1    -1    kaddressbook/xxport/xxportmanager.h

http://commits.kde.org/kdepim/10c62809e15cf7a08861d4970eb499e9fe9de5de