Fix Bug 345319 - importing ldif data fails to recognize groups

FIXED-IN: 4.14.7
BUG: 345319